Move to Gson as JSON serializer and other minor fixes and improvements