@@ -1,2 +1,4 @@
 # holded-java-sdk
 A Java SDK for the Holded's REST API
+
+To execute with Java 9+, add "--add-opens java.base/java.lang=ALL-UNNAMED" to your JVM options. 
